# fastapi_starter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: misspell.yml  test.yml
fastapi_starter/: bootstrap.py  events.py  example.py  main.py  message_bus.py
tests/: test_fastapi_starter.py
tests/test_example/: test_some_function.py
