[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = "FastAPI starter app."
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/Kilo59/fastapi_starter"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

wemake-python-styleguide = "^0.14.0"
flake8-pytest-style = "^1.1"
nitpick = "^0.22"

safety = "^1.9"

pytest = "^5.4"
pytest-cov = "^2.7"
pytest-randomly = "^3.3"

sphinx = "^2.2"
sphinx-autodoc-typehints = "<1.11"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.6"
pytest-asyncio = "^0.11.0"
