[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = "FastAPI starter app."
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/Kilo59/fastapi_starter"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
# formatting
black = "^19.10b0"
isort = "^4.3.21"

mypy = "^0.770"

wemake-python-styleguide = "^0.14.0"
flake8-pytest-style = "^1.1"
nitpick = "^0.22"

safety = "^1.9"

pre-commit = "^2.3.0"

# Testing
pytest = "^5.4"
pytest-asyncio = "^0.11.0"
pytest-cov = "^2.7"
pytest-randomly = "^3.3"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"

[tool.isort]
known_third_party = ["pytest"]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 88
