[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = "FastAPI starter app."
license = "MIT"
authors = []
readme = "README.md"
repository = "https://github.com/Kilo59/fastapi_starter"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
python-multipart = "^0.0.5"
uvicorn = "^0.11.5"
fastapi = "^0.54.1"

[tool.poetry.dev-dependencies]
# formatting
black = "^20.8b1"
isort = "^5"

# static analysis
mypy = "^0.770"
pylint = "*"
pre-commit = "^2.3.0"

# Testing
pytest = "^5.4"
pytest-asyncio = "^0.11.0"
pytest-cov = "^2.7"

[tool.isort]
profile = "black"
multi_line_output = 3
